tests/error/if.moc
void main() {
    if('a') {
        int x = 42;
    }
}
